@@ -1,3 +1,9 @@
+2011-09-26  Murray Cumming  <murrayc@murrayc-desktop>
+
+	reviewed by: <delete if not using a buddy>
+
+	* glom/mode_data/box_data_list_related.cc:
+
 2011-09-22  Murray Cumming  <murrayc@murrayc.com>
 
 	Print Layout: Add an Align menu.
